hphp/test/zend/good/ext/standard/tests/image/getimagesize_tif_mm.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!defined("IMAGETYPE_TIFF_MM")) {
    die("skip tiff_mm file format is not available");
}
}
