hphp/test/zend/bad/ext/standard/tests/image/getimagesize_tif_mm.php.skipif
<?php
	if (!defined("IMAGETYPE_TIFF_MM")) {
		die("skip tiff_mm file format is not available");
	}
?>